# Monet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Monet/: MonetApp.swift
Monet.xcodeproj/: project.pbxproj
Monet/Models/: Account.swift  Credentials.swift  UsageData.swift
Monet/Resources/: Info.plist
Monet/Services/: AuthenticationService.swift  KeychainService.swift  UpdateService.swift  UsageAPIService.swift
Monet/Utilities/: Constants.swift  TimeFormatter.swift
Monet/ViewModels/: UsageViewModel.swift
Monet/Views/: MenuBarIcon.swift  SettingsView.swift  SettingsWindowController.swift  UsagePanel.swift
Monet/Views/Components/: CircularProgress.swift  ProgressBar.swift  UsageRow.swift  VisualEffectView.swift
core/: Cargo.toml
core/examples/: fetch.rs
core/src/: auth.rs  config.rs  credentials.rs  lib.rs  models.rs  oauth.rs  usage.rs
desktop/scripts/: release-linux.sh  release-windows.ps1
desktop/src-tauri/: Cargo.toml  monet.desktop  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: gauge.rs  main.rs
desktop/ui/: index.html  settings.html
