[package]
name = "monet-core"
version = "0.1.0"
edition = "2021"
description = "Shared cross-platform core for Monet: Claude usage monitoring (models, usage API, OAuth). Platform shells (macOS SwiftUI, Tauri desktop) build UI on top of this."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls (not native OpenSSL) so the core links cleanly on every platform and
# inside a portable AppImage without a system libssl dependency.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
# tier-3 OAuth (Monet's own browser sign-in): PKCE + loopback callback server.
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
tokio = { version = "1", features = ["net", "time", "io-util"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Open URLs via ShellExecuteW instead of `cmd /C start`, which would mangle the
# `&`-separated OAuth query string (see oauth::open_in_browser_windows).
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
