[package]
name = "monet-desktop"
version = "0.1.0"
edition = "2021"
description = "Monet cross-platform desktop (Tauri) — glanceable tray usage monitor."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
resvg = "0.45"
monet-core = { path = "../../core" }
tokio = { version = "1", features = ["time"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
