[package]
name = "monet-desktop"
version = "1.0.18"
edition = "2021"
description = "Monet cross-platform desktop (Tauri) — glanceable tray usage monitor."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
resvg = "0.45"
monet-core = { path = "../../core" }
tokio = { version = "1", features = ["time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
